--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,11 @@ form {
 }
 
 input[type="checkbox"] {
-    display: none;
+    display: block;
+    margin: 10px auto;
 }
 
 label {
-    display: block;
     cursor: pointer;
     padding: 10px;
     margin: 5px;
@@ -37,12 +37,6 @@ label:hover {
     background-color: #f0f0f0;
     color: #333;
     border-color: #999;
-}
-
-input[type="checkbox"]:checked + label {
-    background-color: #007bff;
-    color: #fff;
-    border-color: #007bff;
 }
 
 button {
@@ -71,4 +65,8 @@ img {
 
 audio {
     margin-top: 20px;
+}
+
+.hidden {
+    display: none;
 }
