--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
-
 .container {
     text-align: center;
     margin-top: 50px;
@@ -18,15 +11,15 @@ form {
     margin-top: 20px;
 }
 
-input[type="checkbox"] {
-    display: block;
-    margin: 10px auto;
+input[type="radio"] {
+    display: none;
 }
 
 label {
+    display: block;
     cursor: pointer;
-    padding: 10px;
-    margin: 5px;
+    padding: 15px; /* Increase the padding to increase the distance */
+    margin: 10px 0; /* Add margin for top and bottom to increase the distance */
     background-color: #fff;
     border: 2px solid #ccc;
     border-radius: 5px;
